[B]Version 2.2.1[/B]
-Maintenance

[B]Version 2.2.0[/B]
-Maintenance

[B]Version 2.1.9[/B]
-Changes in walla video:
-Nick +Nickjr (KIDSIL)
-Wallavod

[B]Version 2.1.7[/B]
- repo check

[B]Version 2.1.5[/B]
-Bug fixing ,now showing "more episodes" correctly

[B]Version 2.1.4[/B]
- Add support for paging in seasons with more than 100 episodes.

[B]Version 2.1.3[/B]
- Add the ability to clean the cache for all modules.

[B]Version 2.1.2[/B]
- Fix URL to be mp4 instead of old RTMP and swf urls.

[B]Version 2.1.0[/B]
- Added statistics for addon usage

[B]Version 2.0.9[/B]
- Added subtitles support(by shlomicthailand)

[B]Version 2.0.8[/B]
- Complete rewrite of the walla vod (not including other channels), now using JSON API , much faster and reliable (by shlomicthailand)

[B]Version 2.0.6[/B]
- Add episodes caching for better performance.
[B]Version 2.0.5[/B]
- Fix for android and conflict with other plugins
[B]Version 2.0.3[/B]
- Fix new walla layouts

[B]Version 2.0.2[/B]
- Another Fix hebrew text for Frodo

[B]Version 2.0.1[/B]
- Fix hebrew text for Frodo

[B]Version 2.0.0[/B]
- Major rewrite of the whole plugin

[B]Version 1.0.19[/B]
- Fixed problem caused by missing fanart

[B]Version 1.0.18[/B]
- Fixed Viva and channel 23

[B]Version 1.0.17[/B]
- Fixed Sratim category

[B]Version 1.0.16[/B]
- Fixed Junior to support the multiple server address changes

[B]Version 1.0.15[/B]
- Added new story tellers. Fixes for various other categories.

[B]Version 1.0.14[/B]
- Yet another change in walla movies needed attention

[B]Version 1.0.13[/B]
- Fixes for eden version + attempt of fixing the walla movies problem with VideoModes

[B]Version 1.0.12[/B]
- Fixed support for Walla Movies

[B]Version 1.0.11[/B]
- Fixed problem with changed video descriptor which caused episodes not to be shown

[B]Version 1.0.10[/B]
- Fixed live feed for the 6 house cameras

[B]Version 1.0.9[/B]
- Fixed string concatination in DEBUG mode in common