@@ -7,6 +7,7 @@
     <string id="0000004">The next generation</string>
     <string id="20000">How long to keep pages in cache</string>
     <string id="20001">Turn on Debug mode</string>
+    <string id="20002">Turn on Adult Mode</string>
     <string id="30001">More...</string>
     <string id="30002">More Movies...</string>
     <string id="30003">Series</string>
