@@ -7,6 +7,7 @@
     <string id="0000004">הדור הבא</string>
     <string id="20000">כמה זמן להחזיק דפים ב cache</string>
     <string id="20001">הפעל Debug</string>
+    <string id="20002">הצג קטגוריית מבוגרים בלבד</string>
     <string id="30001">עוד פרקים</string>
     <string id="30002">עוד סרטים</string>
     <string id="30003">סדרות</string>
