@@ -2,4 +2,5 @@
 <settings>
     <setting label="20000" type="labelenum" values="0|3|9|12|24|168" id="cache" default="168"/>
     <setting label="20001" type="bool" id="DEBUG" default="false"/>
+    <setting id="Adults" type="bool" label="20002" default="false" />
 </settings>
