@@ -1,3 +1,8 @@
+[B]Version 2.2.2[/B]
+-Adults is Now optional from settings .
+
+
+
 [B]Version 2.2.1[/B]
 -Maintenance
 
